--- a/requirements.txt
+++ b/requirements.txt
@@ -69,7 +69,7 @@ pytz==2022.4
 PyWavelets==1.4.1
 pyzmq==24.0.1
 requests==2.28.1
-scikit-image==0.18.3
+#scikit-image==0.18.3
 scipy==1.9.1
 Send2Trash==1.8.0
 six==1.16.0
